--- a/GridPreviewer/Base.lproj/Main.storyboard
+++ b/GridPreviewer/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
         <!--Collection View Controller-->
         <scene sceneID="53Y-ei-heb">
             <objects>
-                <collectionViewController id="NbY-sw-BDE" sceneMemberID="viewController">
+                <collectionViewController id="NbY-sw-BDE" customClass="CollectionViewController" customModule="GridPreviewer" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="0ts-dm-2hF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
