--- a/GridPreviewer/Base.lproj/Main.storyboard
+++ b/GridPreviewer/Base.lproj/Main.storyboard
@@ -54,20 +54,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9ng-zP-Qdc">
-                            <size key="itemSize" width="50" height="50"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="9ng-zP-Qdc">
+                            <size key="itemSize" width="92" height="161"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="zfD-s3-t4E">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="Cell" reuseIdentifier="Cell" id="zfD-s3-t4E" customClass="CollectionViewCell" customModule="GridPreviewer" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="92" height="160"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="92" height="160"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2A2-f7-qXb">
+                                            <rect key="frame" x="0.0" y="0.0" width="92" height="160"/>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRJ-Fr-wl3">
+                                            <rect key="frame" x="0.0" y="32" width="92" height="128"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eg4-Ev-cFw">
+                                                    <rect key="frame" x="0.0" y="0.0" width="92" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="BNA-Ed-pPt"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                    <color key="textColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="6hM-xM-3oB">
+                                                    <rect key="frame" x="0.0" y="21" width="92" height="107"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.23935145547945205" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="6hM-xM-3oB" firstAttribute="top" secondItem="Eg4-Ev-cFw" secondAttribute="bottom" id="7sc-Cp-qTO"/>
+                                                <constraint firstAttribute="trailing" secondItem="6hM-xM-3oB" secondAttribute="trailing" id="CjJ-xO-Xq5"/>
+                                                <constraint firstAttribute="trailing" secondItem="Eg4-Ev-cFw" secondAttribute="trailing" id="OIN-Kb-uhJ"/>
+                                                <constraint firstAttribute="height" constant="128" id="Qtv-pG-cS5"/>
+                                                <constraint firstItem="6hM-xM-3oB" firstAttribute="leading" secondItem="xRJ-Fr-wl3" secondAttribute="leading" id="eTJ-cw-QgM"/>
+                                                <constraint firstItem="Eg4-Ev-cFw" firstAttribute="leading" secondItem="xRJ-Fr-wl3" secondAttribute="leading" id="hqj-XP-0ir"/>
+                                                <constraint firstAttribute="bottom" secondItem="6hM-xM-3oB" secondAttribute="bottom" id="piP-6j-Kzr"/>
+                                                <constraint firstItem="Eg4-Ev-cFw" firstAttribute="top" secondItem="xRJ-Fr-wl3" secondAttribute="top" id="sA4-4M-X4z"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="2A2-f7-qXb" firstAttribute="leading" secondItem="zfD-s3-t4E" secondAttribute="leading" id="AzM-z4-JLO"/>
+                                    <constraint firstItem="2A2-f7-qXb" firstAttribute="leading" secondItem="zfD-s3-t4E" secondAttribute="leading" id="CnG-k4-q1y"/>
+                                    <constraint firstAttribute="trailing" secondItem="xRJ-Fr-wl3" secondAttribute="trailing" id="OA7-wL-n8m"/>
+                                    <constraint firstAttribute="bottom" secondItem="2A2-f7-qXb" secondAttribute="bottom" id="VMf-Hf-qkz"/>
+                                    <constraint firstItem="2A2-f7-qXb" firstAttribute="top" secondItem="zfD-s3-t4E" secondAttribute="top" id="d4k-xV-deD"/>
+                                    <constraint firstAttribute="bottom" secondItem="xRJ-Fr-wl3" secondAttribute="bottom" id="qBQ-l2-hUz"/>
+                                    <constraint firstItem="xRJ-Fr-wl3" firstAttribute="leading" secondItem="zfD-s3-t4E" secondAttribute="leading" id="uMa-yW-2tf"/>
+                                    <constraint firstAttribute="trailing" secondItem="2A2-f7-qXb" secondAttribute="trailing" id="ywb-8h-r6Y"/>
+                                </constraints>
+                                <size key="customSize" width="92" height="160"/>
+                                <connections>
+                                    <outlet property="idLabel" destination="Eg4-Ev-cFw" id="BFY-JM-CRa"/>
+                                    <outlet property="imageView" destination="2A2-f7-qXb" id="Ux0-O5-fYD"/>
+                                    <outlet property="titleLabel" destination="6hM-xM-3oB" id="nWD-ur-ZQj"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -79,7 +131,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q3y-uc-MMa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1889" y="-654"/>
+            <point key="canvasLocation" x="1888.8" y="-654.42278860569718"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="B5J-8Z-0vS">
