[add] cell image remote updating.

--- a/GridPreviewer/Base.lproj/Main.storyboard
+++ b/GridPreviewer/Base.lproj/Main.storyboard
@@ -68,10 +68,10 @@
                                     <rect key="frame" x="0.0" y="0.0" width="92" height="160"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2A2-f7-qXb">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2A2-f7-qXb">
                                             <rect key="frame" x="0.0" y="0.0" width="92" height="160"/>
                                         </imageView>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRJ-Fr-wl3">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRJ-Fr-wl3" userLabel="MaskView">
                                             <rect key="frame" x="0.0" y="32" width="92" height="128"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eg4-Ev-cFw">
